feat: add category/comment modules and update posts
